Many Issues Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* blue - #4285f4
+ red - ea4335
+ yellow - fbbc04
+ green - 34a853 */
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -14,6 +19,10 @@ a {
 a:hover {
   color: #8577fb;
   text-decoration: none;
+}
+
+p {
+  margin: 0;
 }
 
 h1,
@@ -41,6 +50,11 @@ h6 {
   color: #fbbc04 !important;
 }
 
+.we-are {
+  font-family: 'Poppins';
+  font-size: 20pt;
+  font-weight: 500;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -154,6 +168,9 @@ h6 {
   font-weight: 400;
   letter-spacing: 2px;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #header .logo a {
@@ -460,7 +477,6 @@ h6 {
   margin: 0;
   font-size: 52px;
   font-weight: 700;
-  line-height: 64px;
   color: #fff;
 }
 
@@ -474,10 +490,10 @@ h6 {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
   display: inline-block;
   padding: 10px 28px;
-  border-radius: 5px;
+  border-radius: 100px;
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
@@ -592,8 +608,6 @@ section {
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
 }
@@ -675,7 +689,7 @@ section {
 --------------------------------------------------------------*/
 .counts {
   background: linear-gradient(90deg, rgba(88, 70, 249, 0.5) 0%, rgba(123, 39, 216, 0.5) 100%), url("../img/counts-bg.png") center center no-repeat;
-  padding: 80px 0 60px 0;
+  padding: 40px 0 30px 0;
 }
 
 .counts .counters span {
@@ -690,9 +704,34 @@ section {
   padding: 0;
   margin: 0 0 20px 0;
   font-size: 15px;
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
 }
 
+.home-cards {
+  height: 400px;
+  width: 250px;
+  box-shadow: 0 0 15px rgba(99, 114, 130, 0.3);
+  transition: all ease 0.3s;
+  border-radius: 10px;
+  margin: 20px;
+  /* padding: 0; */
+}
+
+.home-cards-img {
+  height: 180px;
+  width: 225px;
+  background: url('/assets/img/events-card.jpeg');
+  background-size: cover;
+  margin-top: 10px;
+}
+
+.card-body {
+  padding: 0 !important;
+}
+
+.card-text {
+  margin-bottom: 15px !important;
+}
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
@@ -1308,8 +1347,10 @@ section {
 }
 
 .faq .faq-list p {
+  font-family: 'Poppins';
   margin-bottom: 0;
   padding: 10px 0 0 0;
+  color: #666;
 }
 
 .faq .faq-list .icon-show {
@@ -1439,9 +1480,7 @@ section {
 }
 
 
-Domains
-
-.domain-header {
+Domains .domain-header {
   font-family: 'Poppins';
   font-weight: 500;
   font-size: 40pt;
@@ -1803,32 +1842,32 @@ Domains
 
   /* Place the timelime to the left */
   .timeline::after {
-      left: 31px;
+    left: 31px;
   }
 
   /* Full-width containers */
   .container-ev {
-      width: 100%;
-      padding-left: 70px;
-      padding-right: 25px;
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
   }
 
   /* Make sure that all arrows are pointing leftwards */
   .container-ev::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
   }
 
   /* Make sure all circles are at the same spot */
   .left-ev::after,
   .right-ev::after {
-      left: 15px;
+    left: 15px;
   }
 
   /* Make all right containers behave like the left ones */
   .right-ev {
-      left: 0%;
+    left: 0%;
   }
 }
