--- a/assets/css/domain.css
+++ b/assets/css/domain.css
@@ -62,7 +62,7 @@ p {
     top: -15px;
 }
 
-.card-header {
+.cards-header {
     font-family: 'Poppins';
     font-weight: 400;
     font-size: 18pt;
@@ -118,19 +118,19 @@ p {
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+}
+
+/* Track */
+::-webkit-scrollbar-track {
     background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #888;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
     background: #555;
-  }
+}
