--- a/assets/css/domain.css
+++ b/assets/css/domain.css
@@ -1,136 +1,135 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 .domains {
-    display: grid;
-    place-items: center;
-    margin-top: 50px;
-    margin-bottom: 30px;
+  display: grid;
+  place-items: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .domain-header {
-    font-family: 'Poppins';
-    font-weight: 500;
-    font-size: 40pt;
-    letter-spacing: -2px;
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 40pt;
+  letter-spacing: -2px;
 }
 
 .domain-subheader {
-    font-family: 'Open Sans';
-    color: gray;
+  font-family: "Open Sans";
+  color: gray;
 }
 
 .cards-parent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
 .cards {
-    width: 300px;
-    height: 450px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(99, 114, 130, 0.3);
-    transition: all ease 0.3s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    overflow: hidden;
-    padding: 0 20px;
-    margin: 20px;
+  width: 300px;
+  height: 450px;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(99, 114, 130, 0.3);
+  transition: all ease 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  padding: 0 20px;
+  margin: 20px;
 }
 
 .cards:hover {
-    box-shadow: 2px 2px 30px rgba(4, 15, 49, 0.08);
-    transform: scale(1.01);
+  box-shadow: 2px 2px 30px rgba(4, 15, 49, 0.08);
+  transform: scale(1.01);
 }
 
 .blue-bar {
-    height: 20px;
-    width: 200%;
-    background: #346cf0;
-    border-radius: 100px;
-    position: absolute;
-    top: -15px;
+  height: 20px;
+  width: 200%;
+  background: #346cf0;
+  border-radius: 100px;
+  position: absolute;
+  top: -15px;
 }
 
 .cards-header {
-    font-family: 'Poppins';
-    font-weight: 400;
-    font-size: 18pt;
-    margin-bottom: 20px;
-    letter-spacing: -1px;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 18pt;
+  margin-bottom: 20px;
+  letter-spacing: -1px;
 }
 
 .card-info {
-    text-align: center;
-    font-family: 'Open Sans';
-    font-size: 11pt;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 11pt;
 }
 
 .img-style {
-    height: 25%;
-    margin-bottom: 50px;
+  height: 25%;
+  margin-bottom: 50px;
 }
 
 .web {
-    background-color: #ea4335;
+  background-color: #ea4335;
 }
 
 .app {
-    background-color: #346cf0;
+  background-color: #346cf0;
 }
 
 .cloud {
-    background-color: #34a853;
+  background-color: #34a853;
 }
 
 .ml {
-    background-color: #fbbc04;
+  background-color: #fbbc04;
 }
 
 .firebase {
-    background-color: #346cf0;
+  background-color: #346cf0;
 }
 
 .flutter {
-    background-color: #34a853;
+  background-color: #34a853;
 }
 
 .cyber-sec {
-    background-color: #ea4335;
+  background-color: #ea4335;
 }
 
 .compi {
-    background-color: #fbbc04;
+  background-color: #fbbc04;
 }
 
 /* Custom */
 
 /* width */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
